--- a/src/LoginCidadao/CoreBundle/Resources/views/base.html.twig
+++ b/src/LoginCidadao/CoreBundle/Resources/views/base.html.twig
@@ -84,7 +84,7 @@ window.onload=function(){
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-74480066-10');
+  ga('create', 'UA-46166474-3', 'rs.gov.br');
   ga('send', 'pageview');
 
 </script>
